# pixtag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  run.py
.github/workflows/: main.yml  release.yml
backend/: api.py  datamodel.py  utils.py
frontend/: index.html  package.json  vite.config.js
frontend/public/locales/en/: translation.json
frontend/public/locales/zh/: translation.json
frontend/src/: App.css  App.jsx  i18n.js  main.jsx
frontend/src/components/: BottomLine.jsx  ControlImView.jsx  HeaderLoad.jsx  ImageListPanel.jsx  ImageViewer.jsx  SettingPanel.jsx  TagControlPanel.jsx  utils.jsx
