[project]
name = "PixTag"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "gradio>=5.34.2",
    "imageio>=2.37.0",
    "itsdangerous>=2.2.0",
    "nuitka>=2.7.12",
    "pandas>=2.3.0",
    "pywebview>=6.0",
]
